Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.8.0
-
Fix Version/s: 5.9.0
-
Component/s: QPA: X11/XCB, Quick: Mouse Touch and Tablet input
-
Labels:
-
Commits:e0c30279ec1fad88346ed3fb483bc3c672fdd01b
Description
[Linux]: When clicking a mouse area then it can end up getting a canceled signal instead of a released signal. This does not happen on other platforms so it appears to be Linux specific.
Attachments
Issue Links
- relates to
-
QTBUG-57253 Mouse events are not sent to correct items when offscreen rendering
-
- Closed
-
For Gerrit Dashboard: QTBUG-60123 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
214498,8 | Add test for detecting invalid mouse button cancel event | 5.11 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
322242,2 | Stop ungrabbing due to FocusAboutToChange | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |